--- a/package.json
+++ b/package.json
@@ -15,16 +15,23 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "superagent": "^5.3.1",
+    "supertest": "^4.0.2",
+    "terser-webpack-plugin": "^3.0.7",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
